grammar.js
    source_file: $ => choice($._commands, optional($.termgap)),

    // https://www.tcl-lang.org/man/tcl8.6/TclCmd/Tcl.htm#M5
    _commands: $ => seq(
      optional($.termgap),
      $._command,
      repeat(
        seq(
          $._command_separator,
          optional($.termgap),
          $._command
        )
      ),
      optional($.termgap),
    ),

    comment: _ => /#(\\(.|\r?\n)|[^\\\n])*/,

    while: $ => seqgap($, 'while', $.expr, $.script),

    // We technically support multi-arg expr's, but make no attempt to parse
    // them as such (except for the first argument)
    expr_cmd: $ => seqgap($, 'expr', $.expr, optional($._word_list)),

    for: $ => seqgap($, "for",
      $.script,
      $.expr,
      $.script,
      $.script,
    ),

    // https://www.tcl.tk/man/tcl/TclCmd/foreach.htm
    // This unfortunately can be quite sensitive to parse errors in the body
    // causing the foreach to just start stuffing things into foreach_clauses
    // as braced_word instead of trying to recover somehow.
    foreach: $ => seqgap($, "foreach",
      $.foreach_clauses,
      $.script,
    ),

    foreach_clauses: $ => intergapped1($, $.foreach_clause),

    foreach_clause: $ => seqgap($, $.literal_list, $._word),

    // https://www.tcl.tk/man/tcl/TclCmd/switch.htm
    switch: $ => seqgap($, "switch",
      // This can result in switches totally breaking in certain cases, very strange
      // field("arguments", $._word_list),
      field("arguments", intergapped1($, $._word)),
      // Maybe this is too complicated for poor tree-sitter. It used to work
      // alright, but I broke it at some point.
      // field("flags", intergapped($, $._word)),
      // field("pattern", $._word),
      $.switch_body,
    ),

    switch_body: $ => choice(
      // Trouble with newlines, doesn't seem very useful anyway.
      // Also makes it hard to properly detect the switch body because a case
      // like `switch -flag pattern { ... }` looks like `-flag` is the pattern
      // and then `pattern` is the first case. Unless there's some precedence
      // magic that would work, I can only think of doing smarter parsing such
      // that the specific flags are recognized.
      // $._inner_switch,

      // We were previously a bit on the strict side (honoring the actual Tcl
      // behavior) by disallowing empty or whitespace-filled {}. Unfortunately
      // parsing of later sibling constructs then ended up broken by an empty
      // {}. Making it more permissive seems like the better call.
      seqnl($,
        token(prec(1, "{")),
        intergappednl($, $._inner_switch),
        "}"
      ),
    ),

    _inner_switch: $ => seqgapnl($,
      $.raw_word,
      // Ehh not totally sold on the aliasing
      choice($.script, alias('-', $.script)),
    ),

    // evaluated,
    // terminator-delimited commands,
    // surrounded by "", {}, or nothing (though in the nothing case it must not have whitespace)
    // Name is slighty awkward, since we don't _know_ things will be eval'ed as
    // scripts. We could call it maybe_script?
    // Also consider hiding this, it's just a wrapper.
    script: $ => choice(
      $._concat_word,
      seq("{", optional($._script_body), "}"),
      // Broadly applicable quotes are really tough, need to ban them in
      // certain constructs or otherwise figure out how to deal with them
      // (custom lexing?)
      // seqnl($, '"', choice($._commands, repeat($.terminator)), '"'),
    ),

    _script_body: $ => choice($._commands, $.termgap),

    try: $ => seqgap($,
      "try",
      $.script,
      repeat(choice(
        seqgap($,
          "on",
          choice(
            "ok", "error", "return", "break", "continue", /[0-4]/
          ),
          $.literal_list,
          $.script,
        ),
        seqgap($,
          "trap",
          $._word,
          $.literal_list,
          $.script,
        )
      )),
      optional($.finally),
    ),

    finally: $=> seqgap($, 'finally', $.script),

    command: $ => seqgap($,
      field('name', $._word),
      optional(field('arguments', $._word_list)),
    ),

    // https://www.tcl-lang.org/man/tcl8.6/TclCmd/Tcl.htm#M9
    _word_list: $ => intergapped1($, $._word),

    // A word that we don't expect to be evaluated as code. This is used by
    // default for most arguments, as the alternative is attempting to parse
    // literally everything in any string which can fall over quickly. Instead
    // we follow a whitelist approach of whether words should be treated as
    // code, along with the `string cat` escape hatch.
    _word: $ => seq(
      optional($.unpack),
      choice($.braced_word, $._concat_word, $.quoted_word)
    ),

    // Might end up useful for arbitrary quoted stuff...
    // _concat_word_noquote: $ => interleaved1($,
    //   choice(
    //     $.escape_sequence,
    //     $.command_substitution,
    //     $.simple_word,
    //     $.varname,
    //     $.variable_substitution,
    //   ),
    //   $.concat,
    // ),

    // All the stuff that can be mashed together without needing whitespace
    // delimiters. These are generally the constructs that undergo first-pass
    // evaluation.
    // FIXME: This splits on stuff like a"a" or a{a} which should actually end
    // up as 1 token (probably needs handling in the scanner). The word just
    // can't start with " or {.
    _concat_word: $ => interleaved1($,
      choice(
        $.escape_sequence,
        $.command_substitution,
        $.variable_substitution,
        $.simple_word,
        $.array_name,
      ),
      $.concat,
    ),

    _ident: _ => token.immediate(prec(2, /[a-zA-Z0-9_]+/)),

    id: $ => choice(
      // FIXME: support $:: and $::a::. As written this causes variable subs
      // to split between variable sub and simple_word.
      seq(optional($._ns_delim), interleaved1($, $._ident, $._ns_delim)), //, optional($._ns_delim)),
      // Yes you can have a variable named {} (accessed with $:: or $(index) if
      // it's an array). This breaks recognition of other namespaced variables,
      // though
      // $._ns_delim,
    ),

    // token.immediate('(') breaks usage of () in bare words (maybe that's okay?)
    // e.g. `puts (string)` should work fine, treat (string) as a string.
    // maybe it makes sense to include () in simple_word or parse arrays in
    // scanner.c?
    // We want token.immediate so abc (xyz) isn't treated as an array, though.

    // An array index can contain almost any non-whitespace.
    // Unfortunately since whitespace is an extra we still allow it incorrectly.
    // Just another thing for the scanner to handle :)
    // Also arr(...$) is treated as a literal $ by Tcl whereas we throw an error
    _array_index: $ => seq(
      '(',
      optional($._concat_word_array_index),
      token.immediate(')'),
    ),

    // cheating here a bit by restricting what an array name can be. If we want
    // stuff like arr(a)(b) or (a) (yes the array name can be empty) to work
    // then will probably need to implement it in the scanner (along with
    // removing the () exclusion from simple_word).
    // Also might have to remove _array_index's token.immediate
    array_name: $ => seq($.simple_word, field('index', $._array_index)),

    // Improving this with optional($.id) means we lose the node altogether which
    // I don't like (can't we have an empty node instead?)
    array_ref: $ => seq($.id, field('index', $._array_index)),

    variable_substitution: $ => seq(
      $._varsub_prefix,
      token(prec(2, '$')),
      choice(
        $.id,
        // FIXME: Missing parsing of array ref in here
        seq('{', /[^}]+/, '}'),
        $.array_ref,
      )
    ),

    set: $ => seqgap($, "set",
      $._word,
      optional($._word)),

    procedure: $ => seqgap($,
      "proc",
      field('name', $._word),
      field('arguments', $.arguments),
      field('body', $.script)
    ),

    arguments: $ => choice(
      seqnl($, '{', intergapped($, $.argument), '}'),
      $._concat_word,
    ),

    argument: $ => choice(
      // TODO: should be raw_word
      field('name', $.simple_word),
      seqnl($, '{', $._argument_content, '}')
    ),

    _argument_content: $ => seqgapnl($,
        field('name', $.raw_word),
        optional(field('default', $.raw_word)),
    ),

    // This is specifically used for expressions that aren't `expr`, since
    // everywhere else requires it to be one word. This is also intentionally
    // restricted to match a subset of unbraced valid expressions due to the
    // current $._expr approach allowing arbitrary whitespace. If people want
    // max flexibility, just wrap in {}
    expr: $ => choice(
      // prec disambiguates from braced_word
      seqnl($, token(prec(1, '{')), $._expr_start, $._expr_nl, '}', $._expr_end),
      $._expr,
    ),

    ...expr_seq((_, ...rules) => seq(...rules), ''),
    ...expr_seq(seqnl, '_nl'),

    conditional: $ => seqgap($,
      "if",
      field('condition', $.expr),
      optional("then"),
      $.script,
      intergapped($, $.elseif),
      optional($.else),
    ),

    elseif: $ => seqgap($,
      "elseif",
      field('condition', $.expr),
      optional("then"),
      $.script,
    ),

    else: $ => seqgap($,
      "else",
      $.script,
    ),

    quoted_word: $ => seq(
      '"',
      repeat(choice(
        $.variable_substitution,
        $._quoted_word_content,
        $.command_substitution,
        $.escape_sequence,
      )),
      '"',
    ),

    _braced_word_contents: _ => /[^{}]+/,

    _nested_braces: $ => seq('{', repeat(choice($._nested_braces, $._braced_word_contents)), '}'),

    // This a truly braced, no-substitution word, only appropriate in places
    // where we know no evaluation will occur (anywhere that it _might_ occur
    // should be a _word).
    // It can have almost anything in it I think (other than unmatched {})
    // FIXME: escaped braces
    // This can cause problems when we get into an error state because it's so
    // flexible, resulting in large chunks of code just becoming braced_word.
    // Not sure how to get better error recovery without just removing this or
    // making it match less.
    braced_word: $ => seq('{', repeat(choice($._nested_braces, $._braced_word_contents)), '}'),


    _raw_word_contents: $ => choice(
      token(/[^{}"\s\\]+/),
      $.escape_sequence,
    ),

    _nested_raw_braces: $ => seqnl($, '{', repeat(choice($._gapnl, $._nested_raw_braces, $._nested_raw_quotes, $._raw_word_contents)), '}'),
    _nested_raw_quotes: $ => seqnl($, '"', repeat(choice($._gapnl, $._nested_raw_braces, $._raw_word_contents)), '"'),

    // This should only be used when we're already inside of braces, since none
    // of the contents are going to be substitutable. This is basically just
    // braced_word but we're already inside the braces and restricted in how
    // spaces can be placed (like switch cases and arguments).
    // FIXME: doesn't allow stuff like a" (just like everywhere else)
    raw_word: $ => choice(
      // Don't expect this to be bulletproof. It's just an interim solution until
      // I figure out proper literal parsing throughout the grammar.
      $._nested_raw_braces,
      $._nested_raw_quotes,
      seq($._raw_word_contents, repeat(choice($._nested_raw_braces, $._raw_word_contents))),
    ),

    list_item: _ => token(prec(-1, /[^{}"\s]+/)),

    _tl_nested_quoted_list: $ => seqnl($, '"',
      repeat(
        choice(
          '\n',
          $._gap,
          // Substitution is permitted only at top level
          $._concat_word,
          alias($._nested_braced_list, $.literal_list),
          $.list_item
        )
      ),
      '"'),

    _nested_braced_list: $ => seqnl($, '{',
      repeat(
        choice(
          '\n',
          $._gap,
          alias($._nested_braced_list, $.literal_list),
          alias($._nested_quoted_list, $.literal_list),
          $.list_item
        )
      ),
      '}'),

    // https://www.tcl-lang.org/cgi-bin/tct/tip/407.html#:~:text=Tcl%27s%20source%20code.-,String%20Representation%20of%20Lists,-The%20routines%20%5Bin
    // Covers cases where a literal can be specified and is interpreted as a list,
    // like foreach vars or trap/on vars.
    // Feels very similar to raw_word, but is not opaque within.
    // Nests infinitely, when realistically we probably only ever care about
    // the first level.
    literal_list: $ => choice(
      $._tl_nested_quoted_list, $._nested_braced_list, $.list_item
    ),

    escape_sequence: _ => token(seq(
      '\\',
      choice(
        /./, // note this won't match newlines
        /[0-7]{1,3}/,
        /x[0-9a-fA-F]{1,2}/,
        /u[0-9a-fA-F]{1,4}/,
        /U[0-9a-fA-F]{1,8}/,
      ),
    )),

    // https://github.com/tree-sitter/tree-sitter/issues/1087#issuecomment-833198651
    _quoted_word_content: _ => token(prec(-1, /([^$\\\[\]"]|\\\r?\n)+|\$/)),

    command_substitution: $ => seq('[', $._cmdsub_start, optional($._script_body), ']', $._cmdsub_end),

    // lol Tcl you cray
    bool_literal: _ => token(prec.dynamic(-2, /t(r(u(e)?)?)?|f(a(l(s(e)?)?)?)?|on|(of)f?|y(e(s)?)?|(n)o?/i)),

    int_literal: _ => token(prec.dynamic(-2, intLiteral)),
    float_literal: _ => token(prec.dynamic(-2, floatLiteral)),

    // I'd kind of like to remove () from the exclusion for matching array names,
    // but there are knock-on effects like degraded recognition of function calls in exprs
    simple_word: _ => token(prec.dynamic(-1, /[^\s\\\[\]{}()$;"]+|\$/)),

    // Functions in exprs are actually slightly more restricted bare words (no
    // leading _ for arbitrary reasons: https://github.com/tcltk/tcl/blob/core-8-6-14/generic/tclCompExpr.c#L2063-L2065, sigh...)
    expr_function_name: _ => token(/[A-Za-z0-9][A-Za-z0-9_]*/),

    // True barewords matching. Doesn't match $/[ because this is expected to be
    // used alongside _concat_word. We also exclude ) as a hack because otherwise
    // we can't recognize the end of an array reference.
    // And as yet another hack we have ( to allow for nested array accesses.
    array_index_word: _ => token(/[^\s\\\[$;()]+/),
  }

  });
