test/corpus/test.txt
================================================================================
Commands
================================================================================

echo "hello"

set hi "heelo"
foreachthing

--------------------------------------------------------------------------------

(source_file
  (command
    (simple_word)
    (quoted_word))
  (set
    (simple_word)
    (quoted_word))
  (command
    (simple_word)))

================================================================================
Commands with strange barewords
================================================================================

join , - -flag
puts a" a"a a""a a"a"
puts []"[] $a"
puts ] ]] a] []] ]"$a $a]

--------------------------------------------------------------------------------

(source_file
  (command
    (simple_word)
    (simple_word)
    (simple_word)
    (simple_word))
  (command
    (simple_word)
    (simple_word)
    (concat)
    (simple_word)
    (simple_word)
    (concat)
    (simple_word)
    (concat)
    (simple_word)
    (simple_word)
    (concat)
    (simple_word)
    (concat)
    (simple_word)
    (concat)
    (simple_word)
    (simple_word)
    (concat)
    (simple_word)
    (concat)
    (simple_word)
    (concat)
    (simple_word))
  (command
    (simple_word)
    (command_substitution)
    (concat)
    (simple_word)
    (concat)
    (command_substitution)
    (variable_substitution
      (id))
    (concat)
    (simple_word))
  (command
    (simple_word)
    (simple_word)
    (simple_word)
    (concat)
    (simple_word)
    (simple_word)
    (concat)
    (simple_word)
    (command_substitution)
    (concat)
    (simple_word)
    (simple_word)
    (concat)
    (simple_word)
    (concat)
    (variable_substitution
      (id))
    (variable_substitution
      (id))
    (concat)
    (simple_word)))

================================================================================
Procedures
================================================================================

proc foo {arg1 arg2 {arg3 default3} { arg4 default4 } } {
    echo "hello"
    echo "word$hi \$bye word"
}
proc f {{a w$][[]}} {}
proc f {{
a
  b } \
c \
d
} {}
proc f {a {b} {b c} a"b a""} {}
proc a {} {}

--------------------------------------------------------------------------------

(source_file
  (procedure
    name: (simple_word)
    arguments: (arguments
      (argument
        name: (raw_word))
      (argument
        name: (raw_word))
      (argument
        name: (raw_word)
        default: (raw_word))
      (argument
        name: (raw_word)
        default: (raw_word)))
    body: (script
      (command
        name: (simple_word)
        arguments: (quoted_word))
      (command
        name: (simple_word)
        arguments: (quoted_word
          (variable_substitution
            (id))
          (escape_sequence)))))
  (procedure
    name: (simple_word)
    arguments: (arguments
      (argument
        name: (raw_word)
        default: (raw_word)))
    body: (script))
  (procedure
    name: (simple_word)
    arguments: (arguments
      (argument
        name: (raw_word)
        default: (raw_word))
      (argument
        name: (raw_word))
      (argument
        name: (raw_word)))
    body: (script))
  (procedure
    name: (simple_word)
    arguments: (arguments
      (argument
        name: (raw_word))
      (argument
        name: (raw_word))
      (argument
        name: (raw_word)
        default: (raw_word))
      (argument
        name: (raw_word))
      (argument
        name: (raw_word)))
    body: (script))
  (procedure
    name: (simple_word)
    arguments: (arguments)
    body: (script)))

================================================================================
Comments
================================================================================

# this is a comment

--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
Foreach
================================================================================

foreach a {1 2 3 4 5} {
    put $i
}

--------------------------------------------------------------------------------

(source_file
  (foreach
    (foreach_clauses
      (foreach_clause
        (literal_list
          (list_item))
        (braced_word)))
    (script
      (command
        (simple_word)
        (variable_substitution
          (id))))))

================================================================================
Foreach multi
================================================================================

foreach {a b} {1 2 4 5} {
    put $i
}
foreach [list a b] "{1 3} [a] $b" {
    put $i
}
foreach "$a [] $a" "" {}

--------------------------------------------------------------------------------

(source_file
  (foreach
    (foreach_clauses
      (foreach_clause
        (literal_list
          (list_item)
          (list_item))
        (braced_word)))
    (script
      (command
        (simple_word)
        (variable_substitution
          (id)))))
  (foreach
    (foreach_clauses
      (foreach_clause
        (command_substitution
          (command
            (simple_word)
            (simple_word)
            (simple_word)))
        (quoted_word
          (command_substitution
            (command
              (simple_word)))
          (variable_substitution
            (id)))))
    (script
      (command
        (simple_word)
        (variable_substitution
          (id)))))
  (foreach
    (foreach_clauses
      (foreach_clause
        (literal_list
          (variable_substitution
            (id))
          (command_substitution)
          (variable_substitution
            (id)))
        (quoted_word)))
    (script)))

================================================================================
Foreach multimulti
================================================================================

foreach a {1 2 4 5} b {6 7 8 9} {
    put $i
}

--------------------------------------------------------------------------------

(source_file
  (foreach
    (foreach_clauses
      (foreach_clause
        (literal_list
          (list_item))
        (braced_word))
      (foreach_clause
        (literal_list
          (list_item))
        (braced_word)))
    (script
      (command
        (simple_word)
        (variable_substitution
          (id))))))

================================================================================
Conditionals
================================================================================

if 1 then {
    echo hi
} elseif {t} {
    echo hi
} else {
    echo bye
}

--------------------------------------------------------------------------------

(source_file
  (conditional
    (expr
      (int_literal))
    (script
      (command
        (simple_word)
        (simple_word)))
    (elseif
      (expr
        (bool_literal))
      (script
        (command
          (simple_word)
          (simple_word))))
    (else
      (script
        (command
          (simple_word)
          (simple_word))))))

================================================================================
Command substitution
================================================================================

echo [echo hello]
echo [procisprefix]
echo [tryit]

--------------------------------------------------------------------------------

(source_file
  (command
    (simple_word)
    (command_substitution
      (command
        (simple_word)
        (simple_word))))
  (command
    (simple_word)
    (command_substitution
      (command
        (simple_word))))
  (command
    (simple_word)
    (command_substitution
      (command
        (simple_word)))))

================================================================================
Escaped string
================================================================================

echo "word$hi \$bye word"
puts "\1 \11 \x123a \u123a \U "
puts \1\11\x123a\u123a\U
puts \[\]
puts \{$text\}
puts \"$text\"
puts {\}} {a\}} {\{a} {a\{} {\\ \\}

--------------------------------------------------------------------------------

(source_file
  (command
    (simple_word)
    (quoted_word
      (variable_substitution
        (id))
      (escape_sequence)))
  (command
    (simple_word)
    (quoted_word
      (escape_sequence)
      (escape_sequence)
      (escape_sequence)
      (escape_sequence)
      (escape_sequence)))
  (command
    (simple_word)
    (escape_sequence)
    (concat)
    (escape_sequence)
    (concat)
    (escape_sequence)
    (concat)
    (simple_word)
    (concat)
    (escape_sequence)
    (concat)
    (escape_sequence))
  (command
    (simple_word)
    (escape_sequence)
    (concat)
    (escape_sequence))
  (command
    (simple_word)
    (escape_sequence)
    (concat)
    (variable_substitution
      (id))
    (concat)
    (escape_sequence))
  (command
    (simple_word)
    (escape_sequence)
    (concat)
    (variable_substitution
      (id))
    (concat)
    (escape_sequence))
  (command
    (simple_word)
    (braced_word)
    (braced_word)
    (braced_word)
    (braced_word)
    (braced_word)))

================================================================================
Array set
================================================================================

set arr(my) 0
set arr(a,b) 0
set arr(}) 0
set arr({) 0
set arr(]) 0
set arr() 0
set arr(") 0
set arr(${f}_f) 0
set arr($arr(a)) 0

--------------------------------------------------------------------------------

(source_file
  (set
    (array_name
      (simple_word)
      (array_index_word))
    (simple_word))
  (set
    (array_name
      (simple_word)
      (array_index_word))
    (simple_word))
  (set
    (array_name
      (simple_word)
      (array_index_word))
    (simple_word))
  (set
    (array_name
      (simple_word)
      (array_index_word))
    (simple_word))
  (set
    (array_name
      (simple_word)
      (array_index_word))
    (simple_word))
  (set
    (array_name
      (simple_word))
    (simple_word))
  (set
    (array_name
      (simple_word)
      (array_index_word))
    (simple_word))
  (set
    (array_name
      (simple_word)
      (variable_substitution)
      (concat)
      (array_index_word))
    (simple_word))
  (set
    (array_name
      (simple_word)
      (variable_substitution
        (array_ref
          (id)
          (array_index_word))))
    (simple_word)))

================================================================================
Array ref
================================================================================

puts $arr(my)
puts $a($a$a)
# The comma doesn't terminate the word as it would in the $a,b case
puts $a(a,b)
puts $j($a,$b)
set $arr(})
set $arr({)
set $arr(])
set $arr()
set $arr(")
set $arr(${f}_f)
set $arr($arr(a))

--------------------------------------------------------------------------------

(source_file
  (command
    (simple_word)
    (variable_substitution
      (array_ref
        (id)
        (array_index_word))))
  (command
    (simple_word)
    (variable_substitution
      (array_ref
        (id)
        (variable_substitution
          (id))
        (concat)
        (variable_substitution
          (id)))))
  (comment)
  (command
    (simple_word)
    (variable_substitution
      (array_ref
        (id)
        (array_index_word))))
  (command
    (simple_word)
    (variable_substitution
      (array_ref
        (id)
        (variable_substitution
          (id))
        (concat)
        (array_index_word)
        (concat)
        (variable_substitution
          (id)))))
  (set
    (variable_substitution
      (array_ref
        (id)
        (array_index_word))))
  (set
    (variable_substitution
      (array_ref
        (id)
        (array_index_word))))
  (set
    (variable_substitution
      (array_ref
        (id)
        (array_index_word))))
  (set
    (variable_substitution
      (array_ref
        (id))))
  (set
    (variable_substitution
      (array_ref
        (id)
        (array_index_word))))
  (set
    (variable_substitution
      (array_ref
        (id)
        (variable_substitution)
        (concat)
        (array_index_word))))
  (set
    (variable_substitution
      (array_ref
        (id)
        (variable_substitution
          (array_ref
            (id)
            (array_index_word)))))))

================================================================================
Namespaced vars
================================================================================

puts $::ns::var $::a $:
puts $ns::var
set ::var 1
set var::v 1
lassign [list 1] ::ns::var(key)

--------------------------------------------------------------------------------

(source_file
  (command
    (simple_word)
    (variable_substitution
      (id))
    (variable_substitution
      (id))
    (simple_word)
    (concat)
    (simple_word))
  (command
    (simple_word)
    (variable_substitution
      (id)))
  (set
    (simple_word)
    (simple_word))
  (set
    (simple_word)
    (simple_word))
  (command
    (simple_word)
    (command_substitution
      (command
        (simple_word)
        (simple_word)))
    (array_name
      (simple_word)
      (array_index_word))))

================================================================================
Exprs
================================================================================

expr {1 + 1}
expr {3. / 4e-4}
expr {t eq tr}
expr { nO || Of }
expr { inf + nan - (1) + [p 1] }
expr { {} eq {123} }
expr { $arr(abc) eq [a ::ar(xyz)] }
expr { func() eq -1 }
expr { func(1, 2) }
expr {$a >0}
expr {"str"eq"str"}
expr { $arr}
expr { spaceyfunc   ( "yes", [this], {works} ) }


--------------------------------------------------------------------------------

(source_file
  (expr_cmd
    (expr
      (binop_expr
        (int_literal)
        (int_literal))))
  (expr_cmd
    (expr
      (binop_expr
        (float_literal)
        (float_literal))))
  (expr_cmd
    (expr
      (binop_expr
        (bool_literal)
        (bool_literal))))
  (expr_cmd
    (expr
      (binop_expr
        (bool_literal)
        (bool_literal))))
  (expr_cmd
    (expr
      (binop_expr
        (binop_expr
          (binop_expr
            (float_literal)
            (float_literal))
          (int_literal))
        (command_substitution
          (command
            (simple_word)
            (simple_word))))))
  (expr_cmd
    (expr
      (binop_expr
        (braced_word)
        (braced_word))))
  (expr_cmd
    (expr
      (binop_expr
        (variable_substitution
          (array_ref
            (id)
            (array_index_word)))
        (command_substitution
          (command
            (simple_word)
            (array_name
              (simple_word)
              (array_index_word)))))))
  (expr_cmd
    (expr
      (binop_expr
        (func_call
          (expr_function_name))
        (unary_expr
          (int_literal)))))
  (expr_cmd
    (expr
      (func_call
        (expr_function_name)
        (func_args
          (int_literal)
          (int_literal)))))
  (expr_cmd
    (expr
      (binop_expr
        (variable_substitution
          (id))
        (int_literal))))
  (expr_cmd
    (expr
      (binop_expr
        (quoted_word)
        (quoted_word))))
  (expr_cmd
    (expr
      (variable_substitution
        (id))))
  (expr_cmd
    (expr
      (func_call
        (expr_function_name)
        (func_args
          (quoted_word)
          (command_substitution
            (command
              (simple_word)))
          (braced_word))))))

================================================================================
Exprs in other places
================================================================================
if $a {
} elseif {1 eq 2} {}
if {
1
} {
puts "good"
}
while f {}
if 1+$a/0 {dostuff}
--------------------------------------------------------------------------------

(source_file
  (conditional
    (expr
      (variable_substitution
        (id)))
    (script)
    (elseif
      (expr
        (binop_expr
          (int_literal)
          (int_literal)))
      (script)))
  (conditional
    (expr
      (int_literal))
    (script
      (command
        (simple_word)
        (quoted_word))))
  (while
    (expr
      (bool_literal))
    (script))
  (conditional
    (expr
      (binop_expr
        (int_literal)
        (binop_expr
          (variable_substitution
            (id))
          (int_literal))))
    (script
      (command
        (simple_word)))))

================================================================================
Try
================================================================================

try { some code
} on error {} {
} on continue {var1 var2} {
  puts "continue"
} trap $p $l {
} trap "[p] [p]" "$l $l" {
} finally { done }
try {} trap a "$b" {}

--------------------------------------------------------------------------------

(source_file
  (try
    (script
      (command
        (simple_word)
        (simple_word)))
    (literal_list)
    (script)
    (literal_list
      (list_item)
      (list_item))
    (script
      (command
        (simple_word)
        (quoted_word)))
    (variable_substitution
      (id))
    (variable_substitution
      (id))
    (script)
    (quoted_word
      (command_substitution
        (command
          (simple_word)))
      (command_substitution
        (command
          (simple_word))))
    (literal_list
      (variable_substitution
        (id))
      (variable_substitution
        (id)))
    (script)
    (finally
      (script
        (command
          (simple_word)))))
  (try
    (script)
    (simple_word)
    (literal_list
      (variable_substitution
        (id)))
    (script)))

================================================================================
For
================================================================================

for {set a 0} {$a < 10} {incr a} { puts $a }
for {set a 0} {$a < 10} {} {
}

--------------------------------------------------------------------------------

(source_file
  (for
    (script
      (set
        (simple_word)
        (simple_word)))
    (expr
      (binop_expr
        (variable_substitution
          (id))
        (int_literal)))
    (script
      (command
        (simple_word)
        (simple_word)))
    (script
      (command
        (simple_word)
        (variable_substitution
          (id)))))
  (for
    (script
      (set
        (simple_word)
        (simple_word)))
    (expr
      (binop_expr
        (variable_substitution
          (id))
        (int_literal)))
    (script)
    (script)))

================================================================================
Switch
================================================================================

switch -glob aaab {
    b       -
    r_rr     {[rrr]}
    *      {a}
    default {}
}

switch $justthepattern {
  *B* -
  /a/ -
  "a space" -
  $a  { do the thing }
}

# This is one big parse error if I try to use $._word_list in the switch rule
switch j {
    k {
         l j l l l l l l l ;
    }
}


--------------------------------------------------------------------------------

(source_file
  (switch
    (simple_word)
    (simple_word)
    (switch_body
      (raw_word)
      (script)
      (raw_word)
      (script
        (command
          (command_substitution
            (command
              (simple_word)))))
      (raw_word)
      (script
        (command
          (simple_word)))
      (raw_word)
      (script)))
  (switch
    (variable_substitution
      (id))
    (switch_body
      (raw_word)
      (script)
      (raw_word)
      (script)
      (raw_word)
      (script)
      (raw_word)
      (script
        (command
          (simple_word)
          (simple_word)
          (simple_word)))))
  (comment)
  (switch
    (simple_word)
    (switch_body
      (raw_word)
      (script
        (command
          (simple_word)
          (simple_word)
          (simple_word)
          (simple_word)
          (simple_word)
          (simple_word)
          (simple_word)
          (simple_word)
          (simple_word))))))

===
Command substitution of full scripts
===

puts [
p a
rty; party
]
---

(source_file
  (command
    (simple_word)
    (command_substitution
      (command
        (simple_word)
        (simple_word))
      (command
        (simple_word))
      (command
        (simple_word)))))

=======
Variable substitution characters
=======

puts $::2::1
puts $_::_
puts [func]1
puts a$ a$a a$$ a$_ a$1 a$/ $$ $\$a \$$a []$ []$a []$[] $:a
puts "a$" "$" "$$" "$ $" "a$a"
puts "$a j"
puts $w:
$

---

(source_file
  (command
    (simple_word)
    (variable_substitution
      (id)))
  (command
    (simple_word)
    (variable_substitution
      (id)))
  (command
    (simple_word)
    (command_substitution
      (command
        (simple_word)))
    (concat)
    (simple_word))
  (command
    (simple_word)
    (simple_word)
    (concat)
    (simple_word)
    (simple_word)
    (concat)
    (variable_substitution
      (id))
    (simple_word)
    (concat)
    (simple_word)
    (concat)
    (simple_word)
    (simple_word)
    (concat)
    (variable_substitution
      (id))
    (simple_word)
    (concat)
    (variable_substitution
      (id))
    (simple_word)
    (concat)
    (simple_word)
    (concat)
    (simple_word)
    (simple_word)
    (concat)
    (simple_word)
    (simple_word)
    (concat)
    (escape_sequence)
    (concat)
    (simple_word)
    (escape_sequence)
    (concat)
    (variable_substitution
      (id))
    (command_substitution)
    (concat)
    (simple_word)
    (command_substitution)
    (concat)
    (variable_substitution
      (id))
    (command_substitution)
    (concat)
    (simple_word)
    (concat)
    (command_substitution)
    (simple_word)
    (concat)
    (simple_word))
  (command
    (simple_word)
    (quoted_word)
    (quoted_word)
    (quoted_word)
    (quoted_word)
    (quoted_word
      (variable_substitution
        (id))))
  (command
    (simple_word)
    (quoted_word
      (variable_substitution
        (id))))
  (command
    (simple_word)
    (variable_substitution
      (id))
    (concat)
    (simple_word))
  (command
    (simple_word)))

================================================================================
Exprs with newlines
================================================================================

expr {1
+ 1
}
expr {3. /
4e-4}
expr {
  t
eq tr}
expr { nan - (
1
)}
expr { arr
(f,t) eq arr(
123
,
456)
}
expr {\
$a}
expr { \
$a}
expr {1+\
$a}
expr {1+ \
$a}
expr {1 && \
$1}
expr {1 &&\
$1}
--------------------------------------------------------------------------------

(source_file
  (expr_cmd
    (expr
      (binop_expr
        (int_literal)
        (int_literal))))
  (expr_cmd
    (expr
      (binop_expr
        (float_literal)
        (float_literal))))
  (expr_cmd
    (expr
      (binop_expr
        (bool_literal)
        (bool_literal))))
  (expr_cmd
    (expr
      (binop_expr
        (float_literal)
        (int_literal))))
  (expr_cmd
    (expr
      (binop_expr
        (func_call
          (expr_function_name)
          (func_args
            (bool_literal)
            (bool_literal)))
        (func_call
          (expr_function_name)
          (func_args
            (int_literal)
            (int_literal))))))
  (expr_cmd
    (expr
      (variable_substitution
        (id))))
  (expr_cmd
    (expr
      (variable_substitution
        (id))))
  (expr_cmd
    (expr
      (binop_expr
        (int_literal)
        (variable_substitution
          (id)))))
  (expr_cmd
    (expr
      (binop_expr
        (int_literal)
        (variable_substitution
          (id)))))
  (expr_cmd
    (expr
      (binop_expr
        (int_literal)
        (variable_substitution
          (id)))))
  (expr_cmd
    (expr
      (binop_expr
        (int_literal)
        (variable_substitution
          (id))))))

================================================================================
Braceless exprs
================================================================================

expr 1 + 1 anything goes
expr anything goes 1 + 1

----

(source_file
  (expr_cmd
    (simple_word)
    (simple_word)
    (simple_word)
    (simple_word)
    (simple_word))
  (expr_cmd
    (simple_word)
    (simple_word)
    (simple_word)
    (simple_word)
    (simple_word)))

===
Force eval as script
===

puts [string cat {this is a script}]
puts {this is not a script}
puts [string length "abc"]
---

(source_file
  (command
    (simple_word)
    (command_substitution
      (command
        (simple_word)
        (simple_word)
        (script
          (command
            (simple_word)
            (simple_word)
            (simple_word)
            (simple_word))))))
  (command
    (simple_word)
    (braced_word))
  (command
    (simple_word)
    (command_substitution
      (command
        (simple_word)
        (simple_word)
        (quoted_word)))))

===
Escapes in bare words
===
this\cmd
this\$cmd
---

(source_file
  (command
    (simple_word)
    (concat)
    (escape_sequence)
    (concat)
    (simple_word))
  (command
    (simple_word)
    (concat)
    (escape_sequence)
    (concat)
    (simple_word)))
